update some bugs with overflow on mini users and increase max length once more for desc

--- a/css/global.css
+++ b/css/global.css
@@ -348,7 +348,6 @@ h6 {
 .event,
 .user {
     display: flex;
-    text-wrap: nowrap;
     flex-direction: row;
     width: auto;
     padding: 20px;
