--- a/css/user.css
+++ b/css/user.css
@@ -9,7 +9,6 @@
 
 #userDetails p {
     font-size: 1.1em;
-    max-height: 85px;
     overflow-y: hidden;
 }
 
